k8s/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend 
        image: ghcr.io/cs-muic/scalable-p2-scalable-t3-kxv/frontend
        imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerconfigjson-github-com
