k8s/minio-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deploy
  labels:
    app: minio-deploy
spec:
  selector:
    matchLabels:
      app: minio 
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio-pvc
      containers:
      - name: minio-deploy
        image: minio/minio:RELEASE.2020-05-01T22-19-14Z
        args:
        - server
        - /storage
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: storage 
          mountPath: "/storage"
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          initialDelaySeconds: 30
          periodSeconds: 10
