k8s/web-controller-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-controller
  labels:
    app: web-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-controller
  template:
    metadata:
      labels:
        app: web-controller
    spec:
      containers:
      - name: backend 
        image: ghcr.io/cs-muic/scalable-p2-scalable-t3-kxv/web-controller
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerconfigjson-github-com
