k8s/worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: backend 
        image: ghcr.io/cs-muic/scalable-p2-scalable-t3-kxv/thumbnail-script
        imagePullPolicy: Always
      imagePullSecrets:
      - name: dockerconfigjson-github-com
