k8s/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type:  ClusterIP
  ports:
  - protocol:  TCP
    port:  80
    targetPort:  8080
